--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Victor Nercio - SCAR Web Development</title>
   <link rel="stylesheet" href="styles/index.css">
+  <link rel="shortcut icon" href="img/LOGO.svg" type="image/x-icon">
 </head>
 
 <body>
