Added dart and Flutter to skills

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
           <img class="tech" src="img/techs/python.png" alt="Python">
           <img class="tech" src="img/techs/cpp.png" alt="C++">
           <img class="tech" src="img/techs/mysql.png" alt="MySQL">
+          <img class="tech" src="img/techs/dart.png" alt="MySQL">
+          <img class="tech" src="img/techs/flutter.png" alt="MySQL">
         </div>
       </div>
     </section>
@@ -92,8 +94,22 @@
           </div>
         </div>
         <div class="project">
+          <div class="project-thumbnail portrait">
+            <img src="img/projects/worked.jpg" alt="Workd app">
+          </div>
+          <div class="project-content">
+            <h2>Workd App</h2>
+            <p>Work sessions, hour-keeping app written in Dart/Flutter.</p>
+            <a class="fa fa-github social-button" 
+              href="https://github.com/vmanun/workd-app" 
+              target="_blank" 
+              rel="noopener noreferrer"
+              title="Check this project!"></a>
+          </div>
+        </div>
+        <div class="project">
           <div class="project-thumbnail">
-            <img src="img/projects/fcc-random-quote-machine.png" alt="Notes app">
+            <img src="img/projects/fcc-random-quote-machine.png" alt="Random Quote Machine">
           </div>
           <div class="project-content">
             <h2>FCC's Random Quote Machine</h2>
@@ -107,7 +123,7 @@
         </div>
         <div class="project">
           <div class="project-thumbnail">
-            <img src="img/projects/fcc-local-weather-app.png" alt="Notes app">
+            <img src="img/projects/fcc-local-weather-app.png" alt="local Weather app">
           </div>
           <div class="project-content">
             <h2>FCC's Local Weather App</h2>
@@ -121,7 +137,7 @@
         </div>
         <div class="project">
           <div class="project-thumbnail">
-            <img src="img/projects/fcc-product-landing-page.png" alt="Notes app">
+            <img src="img/projects/fcc-product-landing-page.png" alt="Product Landing Page">
           </div>
           <div class="project-content">
             <h2>FCC's Product Landing Page</h2>
