Remove Twitter from social meadia to keep it clean

--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
       <hr>
       <p class="top-description">Hello there! <br> My name is <b>Victor Nercio</b> and I'm a front-end developer!</p>
       <div class="social-buttons">
-        <a class="social-button fa fa-twitter" 
-          href="https://twitter.com/scarstracks"
-          title="Link to Victor's Twitter profile" 
-          target='_blank'></a>
         <a class="social-button fa fa-linkedin" 
           href="https://www.linkedin.com/in/victor-nercio-549671149"
           title="Link to Victor's LinkedIn profile" 
@@ -40,7 +36,7 @@
           href="https://github.com/vmanun" 
           title="Link to Victor's GitHub account"
           target='_blank'></a>
-        <a class="social-button fa fa-free-code-camp"
+        <a class="social-button fa fa-free-code-camp fcc"
           href="https://www.freecodecamp.org/vmanun"
           title="Link to Victor's FreeCodeCamp profile" 
           target='_blank'></a>
@@ -162,10 +158,6 @@
             </p>
         </div>
         <div class="social-media">
-          <a class="social-button fa fa-twitter" 
-            href="https://twitter.com/scarstracks"
-            title="Link to Victor's Twitter profile" 
-            target='_blank'></a>
           <a class="social-button fa fa-linkedin" 
             href="https://www.linkedin.com/in/victor-nercio-549671149"
             title="Link to Victor's LinkedIn profile" 
@@ -174,7 +166,7 @@
             href="https://github.com/vmanun" 
             title="Link to Victor's GitHub account"
             target='_blank'></a>
-          <a class="social-button fa fa-free-code-camp"
+          <a class="social-button fa fa-free-code-camp fcc"
             href="https://www.freecodecamp.org/vmanun"
             title="Link to Victor's FreeCodeCamp profile" 
             target='_blank'></a>
