--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <p>If you want to connect with me, you can send an email to:
               <br>
               <br>
-              <b>vmanuelns@hotmail.com</b>
+              <b>victornercio.contact@gmail.com</b>
             </p>
         </div>
         <div class="social-media">
